[gd_scene load_steps=92 format=2]

[ext_resource path="res://Seti.gd" type="Script" id=1]
[ext_resource path="res://Sprites/seti.png" type="Texture" id=2]
[ext_resource path="res://AnimatedSprite.gd" type="Script" id=3]
[ext_resource path="res://Sprites/seti_tornado_4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/seti_teleport.png" type="Texture" id=5]
[ext_resource path="res://Sprites/seti_die.png" type="Texture" id=6]
[ext_resource path="res://Sprites/flap_bat_f1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/flap_bat_f2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/seti_tornado_no_ropes.png" type="Texture" id=9]

[sub_resource type="Shader" id=21]
code = "shader_type canvas_item;

uniform bool active = false;
uniform float luminance_threshold = 0.56;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 red_color = vec4(1.0, 0.0, 0.0, previous_color.a);
	vec4 new_color = previous_color;

	if (active) {
		float luminance = 0.299 * previous_color.r + 0.587 * previous_color.g + 0.114 * previous_color.b;

		if (luminance > luminance_threshold) {
			new_color = red_color;
		}
	}

	COLOR = new_color;
}
"

[sub_resource type="ShaderMaterial" id=22]
shader = SubResource( 21 )
shader_param/active = true
shader_param/luminance_threshold = 0.56

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 9 )
region = Rect2( 2432, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 9 )
region = Rect2( 3040, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 9 )
region = Rect2( 3648, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 9 )
region = Rect2( 4256, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 97, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 194, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 291, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 388, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 485, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 1088, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 5 )
region = Rect2( 485, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 5 )
region = Rect2( 388, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 5 )
region = Rect2( 291, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 5 )
region = Rect2( 194, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 5 )
region = Rect2( 97, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 5 )
region = Rect2( 97, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 194, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 291, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 388, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 5 )
region = Rect2( 485, 0, 97, 90 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 608, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 1216, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 1824, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 2432, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 3040, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 3648, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 4256, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 4864, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 5472, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 6080, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 6688, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 7296, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 7904, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 8512, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 9120, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 9728, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 10336, 0, 608, 240 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": true,
"name": "Bats",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": false,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Enter",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Punch",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": false,
"name": "TelegraphJump",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": false,
"name": "TelegraphPunch",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "TelegraphTornado",
"speed": 5.0
}, {
"frames": [ null, SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": false,
"name": "TeleportIn",
"speed": 7.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), null ],
"loop": false,
"name": "TeleportOut",
"speed": 7.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "Tornado",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 17, 24 )

[sub_resource type="CapsuleShape2D" id=19]
height = 9.99853

[sub_resource type="CapsuleShape2D" id=25]
radius = 21.9962
height = 0.00928497

[sub_resource type="CapsuleShape2D" id=64]
radius = 26.0
height = 56.0

[sub_resource type="CircleShape2D" id=65]
radius = 29.0

[sub_resource type="CircleShape2D" id=66]
radius = 32.0

[sub_resource type="CircleShape2D" id=67]
radius = 29.0

[sub_resource type="CircleShape2D" id=68]
radius = 18.0278

[sub_resource type="CircleShape2D" id=69]
radius = 23.0

[sub_resource type="CircleShape2D" id=70]
radius = 27.0185

[sub_resource type="CircleShape2D" id=71]
radius = 19.105

[sub_resource type="CircleShape2D" id=72]
radius = 27.0

[sub_resource type="CircleShape2D" id=73]
radius = 30.0

[sub_resource type="CircleShape2D" id=74]
radius = 18.0278

[sub_resource type="CircleShape2D" id=75]
radius = 20.0

[sub_resource type="CircleShape2D" id=76]
radius = 26.0192

[sub_resource type="CircleShape2D" id=77]
radius = 19.0263

[sub_resource type="Animation" id=23]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Shader" id=62]
code = "shader_type canvas_item;

uniform bool is_card = true;
uniform int zoom_choice = 9;
uniform float iTime;
uniform vec2 pixel_size = vec2(0.01, 0.01); // Size of the pixelation
uniform float saturation = 0.5; // Less than 1 for desaturation
uniform float time_scroll_speed = 0.1; // Speed of the time-based scrolling effect
uniform vec2 bg_scroll_speed = vec2(0.01, 0.01); // Background scrolling speed

float distanceToMandelbrot(in vec2 c) {
    float c2 = dot(c, c);
    if (256.0 * c2 * c2 - 96.0 * c2 + 32.0 * c.x - 3.0 < 0.0) return 0.0;
    if (16.0 * (c2 + 2.0 * c.x + 1.0) - 1.0 < 0.0) return 0.0;

    float di = 1.0;
    vec2 z = vec2(0.0);
    float m2 = 0.0;
    vec2 dz = vec2(0.0);
    for (int i = 0; i < 300; i++) {
        if (m2 > 1024.0) {
            di = 0.0;
            break;
        }
        dz = 2.0 * vec2(z.x * dz.x - z.y * dz.y, z.x * dz.y + z.y * dz.x) + vec2(1.0, 0.0);
        z = vec2(z.x * z.x - z.y * z.y, 2.0 * z.x * z.y) + c;
        m2 = dot(z, z);
    }

    float d = 0.5 * sqrt(dot(z, z) / dot(dz, dz)) * log(dot(z, z));
    if (di > 0.5) d = 0.0;
    return d;
}

void fragment() {
    vec2 iResolution = 1.0 / SCREEN_PIXEL_SIZE;
    vec2 uv = UV;

    // Pixelation
    uv = floor(uv / pixel_size) * pixel_size;

    uv -= 0.5;
    vec2 p = uv;
    if (!is_card) {
        p = (2.0 * FRAGCOORD.xy - iResolution.xy) / iResolution.y;
    }

    // Background scrolling
    vec2 scroll_offset = bg_scroll_speed * iTime;
    p += scroll_offset;

    float tz = 0.5 - 0.5 * cos(0.325 * (iTime));
    float zoo = pow(0.5, 15.0 * tz);
    vec2 zoom_coords;

    switch (zoom_choice) {
        case 0: zoom_coords = vec2(-0.05, .6805); break;
        case 1: zoom_coords = vec2(-1.781112019099124, -0.0000136376471796); break;
        case 2: zoom_coords = vec2(0.35630947083789705, -0.648757851006298); break;
        case 3: zoom_coords = vec2(-1.768778833, -0.001738996); break;
        case 4: zoom_coords = vec2(-1.295325656318456, -0.4413355214180586); break;
        case 5: zoom_coords = vec2(0.3508865005476451, 0.3843484734392114); break;
        case 6: zoom_coords = vec2(0.4245124140026012, -0.2075295589317497); break;
        case 7: zoom_coords = vec2(0.018879985495961128, -0.6582934744125648); break;
        case 8: zoom_coords = vec2(-0.7711605143050897, -0.11535251780381468); break;
        case 9: zoom_coords = vec2(-0.9396421133753767, 0.2657828189979378); break;
    }

    vec2 c = zoom_coords + p * zoo;

    float d = distanceToMandelbrot(c);
    d = clamp(pow(4.0 * d / zoo, 0.2), 0.0, 1.0);

    // Color shifting with desaturation
    vec3 col = vec3(0.5 + 0.5 * sin(6.28318 * (d + iTime * time_scroll_speed) + vec3(0.0, 2.0, 4.0)));
    col = mix(vec3(0.5), col, saturation); // Desaturate colors
    
    COLOR = vec4(col, 1.0);
}
"

[sub_resource type="ShaderMaterial" id=63]
shader = SubResource( 62 )
shader_param/is_card = true
shader_param/zoom_choice = 8
shader_param/iTime = -13.286
shader_param/pixel_size = Vector2( 0.002, 0.002 )
shader_param/saturation = 0.5
shader_param/time_scroll_speed = 0.1
shader_param/bg_scroll_speed = Vector2( 0.01, 0.01 )

[sub_resource type="AnimatedTexture" id=82]
frames = 2
fps = 8.0
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 8 )
frame_1/delay_sec = 0.0

[node name="Seti" type="KinematicBody2D"]
collision_layer = 2
collision/safe_margin = 1.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 22 )
frames = SubResource( 9 )
animation = "Bats"
frame = 1
playing = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 7 )
shape = SubResource( 10 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2( -1, 12 )
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 2

[node name="WallDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -25, 0 )

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0, -18 )
rotation = 1.60378
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0.0329781, 0.999456 )
rotation = -0.0230974
shape = SubResource( 19 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -13, 9 )
rotation = 1.57122
shape = SubResource( 25 )

[node name="CollisionCenter" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -1, -5 )
shape = SubResource( 64 )
disabled = true

[node name="TF1" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 40, -13 )
shape = SubResource( 65 )
disabled = true

[node name="TF2" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -55, -41 )
shape = SubResource( 66 )
disabled = true

[node name="TF3" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -118, -51 )
shape = SubResource( 67 )
disabled = true

[node name="TF4" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -158, -58 )
shape = SubResource( 68 )
disabled = true

[node name="TF5" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 70, -8 )
shape = SubResource( 69 )
disabled = true

[node name="TF6" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 135, -3 )
shape = SubResource( 70 )
disabled = true

[node name="TF7" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 167, 0 )
shape = SubResource( 71 )
disabled = true

[node name="TF8" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -88, -8 )
shape = SubResource( 72 )
disabled = true

[node name="TF9" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -182, 0 )
shape = SubResource( 73 )
disabled = true

[node name="TF10" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -218, 7 )
shape = SubResource( 74 )
disabled = true

[node name="TF11" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 56, -42 )
shape = SubResource( 75 )
disabled = true

[node name="TF12" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 120, -78 )
shape = SubResource( 76 )
disabled = true

[node name="TF13" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 163, -98 )
shape = SubResource( 77 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/Hurt = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="FliesPaticles" type="CPUParticles2D" parent="."]
position = Vector2( 14, -11 )
z_index = -1
amount = 20
lifetime = 4.0
preprocess = 100.0
randomness = 0.5
fixed_fps = 60
local_coords = false
emission_shape = 1
emission_sphere_radius = 13.48
spread = 46.32
gravity = Vector2( 14, -45 )
initial_velocity = 0.5
initial_velocity_random = 1.0
orbit_velocity = 0.2
orbit_velocity_random = 1.0
damping = 43.86
color = Color( 0.278431, 0.270588, 0.247059, 1 )

[node name="BurstPaticles" type="CPUParticles2D" parent="."]
position = Vector2( -7, -9 )
z_index = 1
emitting = false
amount = 50
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 0.5
lifetime_randomness = 0.2
fract_delta = false
emission_shape = 1
emission_sphere_radius = 13.48
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
scale_amount = 2.0
scale_amount_random = 0.5
color = Color( 0.392157, 0.466667, 0.266667, 1 )

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="EnterTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[node name="TelegraphTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PunchTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Mandelbrot" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
material = SubResource( 63 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -502.0
margin_top = -497.0
margin_right = 498.0
margin_bottom = 503.0

[node name="BatParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
lifetime = 10.0
local_coords = false
texture = SubResource( 82 )
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.05
orbit_velocity_random = 1.0
linear_accel = 1.0
scale_amount_random = 0.1
anim_speed_random = 0.5
anim_offset_random = 0.5

[node name="BatParticles2" type="CPUParticles2D" parent="."]
z_index = -10
emitting = false
amount = 500
lifetime = 10.0
local_coords = false
texture = SubResource( 82 )
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
orbit_velocity = 0.05
orbit_velocity_random = 1.0
linear_accel = 1.0
scale_amount_random = 0.1
anim_speed_random = 0.5
anim_offset_random = 0.5

[node name="BatsTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
[connection signal="timeout" from="EnterTimer" to="." method="_on_EnterTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="TelegraphTimer" to="." method="_on_TelegraphTimer_timeout"]
[connection signal="timeout" from="PunchTimer" to="." method="_on_PunchTimer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
[connection signal="timeout" from="BatsTimer" to="." method="_on_BatsTimer_timeout"]
